--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ DB_NAME='Glimmer_db'
 DB_USER='postgres'
 DB_PASSWORD='Allah'
 JWT_SECRET='3b656e670dindrjub42c'
-DB_URL='https://api.wikimedia.org/feed/v1/wikipedia/en/onthisday/all/${month}/${day}'
+DB_URL='postgressql://postgres:password@host:port/glimmer_in_time'
