--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,5 @@
 PORT=3001
-DB_NAME='Glimmer_db'
+DB_NAME='glimmer_db'
 DB_USER='postgres'
 DB_PASSWORD='Allah'
 JWT_SECRET='3b656e670dindrjub42c'
-DB_URL='postgressql://postgres:password@host:port/glimmer_in_time'
