--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/server.ts"
+    "dev": "npx tsx src/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -17,7 +18,8 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
