Working version of activity 26, still need to add own code

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
-PORT=3001
 DB_NAME='glimmer_db'
 DB_USER='postgres'
 DB_PASSWORD='Allah'
-JWT_SECRET='3b656e670dindrjub42c'
+JWT_SECRET_KEY='mysecretshhh'
