--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
+PORT=3001
 DB_NAME='glimmer_db'
 DB_USER='postgres'
 DB_PASSWORD='Allah'
-JWT_SECRET_KEY='mysecretshhh'
+JWT_SECRET='3b656e670dindrjub42c'
