working user seed path for backend server side

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,13 +1,12 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    /* Modules */
-    "rootDir": "src" /* Specify the root folder within your source files. */,
-
-    /* Emit */
-    "outDir": "dist" /* Specify an output folder for all emitted files. */
-    // "noEmitOnError": true /* Disable emitting files if any type checking errors are reported. */
+    "outDir": "dist",  // ✅ Ensures compiled files go to `dist/`
+    "rootDir": "src",  // ✅ Ensures TypeScript compiles from `src/`
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES6",
+    "esModuleInterop": true,
+    "strict": true
   },
-  "include": ["src"],
-  "typeRoots": ["./node_modules/@types", "./src/types"]
+  "include": ["src"]
 }
