--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,7 @@
 PORT=3001
 DB_NAME='glimmer_db'
 DB_USER='postgres'
-DB_PASSWORD='Allah'
+DB_PASSWORD='Yvaleos1989427!'
 JWT_SECRET='3b656e670dindrjub42c'
+DB_HOST=localhost
+DB_DIALECT=postgres
