--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 PORT=3001
 DB_NAME='glimmer_db'
 DB_USER='postgres'
-DB_PASSWORD='Yvaleos1989427!'
+DB_PASSWORD='Allah'
 JWT_SECRET='3b656e670dindrjub42c'
 DB_HOST=localhost
 DB_DIALECT=postgres
